# haskell-parser

./: .gitignore  In.txt  LICENSE  Out.txt  README.md  haskell-parser.cabal  testIn.txt
app/: Main.hs
src/: Boolean.hs  Evaluate.hs  Evaluator.hs  Executor.hs  ExprEvaluator.hs  ExprParser.hs  Lib.hs  Lib2.hs  Lib4.hs  Mylib.hs  Parse.hs  StmtEvaluator.hs  StmtParser.hs
